Adding projects section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#education">EDUCATION</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">PROJECTS</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -102,6 +105,7 @@
                 <li class="tab"><a href="#skills">SKILLS</a></li>
                 <li class="tab"><a href="#experience">EXPERIENCE</a></li>
                 <li class="tab"><a href="#education">EDUCATION</a></li>
+                <li class="tab"><a href="#projects">PROJECTS</a></li>
               </ul>
             </div>
 
@@ -380,7 +384,64 @@
                         </div>
                       </div>
                     </section>
+                    <div id="projects"></div>
                   </div>
+                </div>
+
+                <!-- Projects -->
+                <div class="panel">
+                  <div class="row">
+                    <section>
+                      <h1>Go Mini Projects</h1>
+                      <p>
+                        Learning by doing is the best approach, and so I'm building up a repository of small GoLang projects.
+                        These projects can then become a topic in the GoLang Handbook mentioned below.
+                      </p>
+                      <a href="https://www.github.com/jimbob3000/goMiniProjects">View the GitHub repository here</a>
+                    </section>
+                  </div>
+
+                  <hr>
+
+                  <div class="row">
+                    <section>
+                      <h1>GoLang Handbook</h1>
+                      <p>
+                        As a part of mastering GoLang, I'm building up a handbook containing code snippets and explanations
+                        on a wide range of topics. From simple variables to integrating with Kafka, the handbook will 
+                        document it all and act as a quick lookup resource for developers.
+                      </p>
+                      <a href="https://www.golangHandbook.com">View the website here</a>
+                    </section>
+                  </div>
+
+                  <hr>
+
+                  <div class="row">
+                    <section>
+                      <h1>VehicleScans</h1>
+                      <p>
+                        This is my first public React project. Using a Golang API and Government data, I am providing a free tool 
+                        to check the MOT history and tax status of any UK vehicle.
+                      </p>
+                      <a href="https://www.VehicleScans.co.uk">View the website here</a>
+                    </section>
+                  </div>
+
+                  <hr>
+
+                  <div class="row">
+                    <section>
+                      <h1>GitHub</h1>
+                      <p>
+                        Aiming to maintain at least 1 commit per day for 100 days, or maybe a full year, I'm progressing the above projects whilst
+                        building up a colorful contribution history. I can then take the annual contributions chart and 3D print a multi-dimension 
+                        bar graph based on the number of contributions per day.
+                      </p>
+                      <a href="https://www.github.com/jimbob3000">View my GitHub account here</a>
+                    </section>
+                  </div>
+                  <div id="experience"></div>
                 </div>
               </div>
             </div>
@@ -392,7 +453,7 @@
     <footer>
       <div class="container">
         <p class="m-0 text-center text-white">&copy; 2022 James Elliott</p>
-        <p class="m-0 text-center text-white">Version 2.0.0</p>
+        <p class="m-0 text-center text-white">Version 2.1.0</p>
       </div>
     </footer>
 
